[package]
name = "pybites-search"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
description = "A command-line search tool for various PyBites endpoints"
license = "MIT"

[dependencies]
cached = "0.34.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[[bin]]
name = "psearch"
path = "src/main.rs"
