[package]
name = "pybites-search"
version = "0.4.0"
authors = ["Bob Belderbos <bob@pybit.es>"]
edition = "2021"
description = "A command-line search tool for Pybites content"
license = "MIT"

[dependencies]
cached = "0.34.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "4.0"

[[bin]]
name = "psearch"
path = "src/main.rs"
