[package]
name = "pybites-search"
version = "1.0.0"
authors = ["Bob Belderbos <bob@pybit.es>"]
edition = "2021"
description = "A command-line search tool for Pybites content"
license = "MIT"
repository = "https://github.com/bbelderbos/pybites-search"
homepage = "https://pybit.es"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4.5.6", features = ["derive"] }
colored = "2"
phf = { version = "0.11.2", features = ["macros"] }

[[bin]]
name = "psearch"
path = "src/main.rs"
